force-app/main/default/objects/ProcessControl__c/ProcessControl__c.object-meta.xml
<CustomObject>
    <label>作業工程管理</label>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>作業工程管理ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>