force-app/main/default/objects/ProcessControl__c/fields/FbDataCreateDate__c.field-meta.xml
<CustomField>
    <fullName>FbDataCreateDate__c</fullName>
    <label>FBデータ作成日</label>
    <type>Date</type>
</CustomField>