force-app/main/default/objects/ProcessControl__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>月</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>