force-app/main/default/objects/ProcessControl__c/fields/RentRemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceDate__c</fullName>
    <label>家賃送金日</label>
    <type>Date</type>
</CustomField>